# dssolve

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  OpenDE.sln  OpenDE.vcxproj  README.md  main.cpp  timetrack.txt
cmake/modules/: FindEigen.cmake
lib/: CMakeLists.txt
lib/src/: serialize.cpp
lib/tests/: CMakeLists.txt
src/: CMakeLists.txt  exceptions.hpp  gui.cpp  gui.hpp  kernel.cpp  kernel.hpp  main.cpp  serialize.cpp  serialize.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  serializationTest.cpp  serializationTest.hpp
